# PDI-Medicas

./: .gitignore  README.md  requirements.txt
Rafael/: requirements.txt
Rafael/artigo/: .gitignore  3d.ipynb  3d.py  3dModel.ipynb  3dModel.txt  JoinPatient.py  MlModel.ipynb  MlModel.py  MlModel.txt  Organizer.py  execute.bash  main.py  open.ipynb  treatSlices.ipynb
Rafael/artigo/utils/: dicomFiles.py  imageProcessing.py  plotting.py
Rafael/atividade1/: main.ipynb
Rafael/atividade2/: main.ipynb
Rafael/atividade3/: CMakeLists.txt  README.txt  binarize.cpp  gamma.cpp  histogram.py  layers.cpp  window_filter.cpp
Rafael/atividade4/: CMakeLists.txt  histogram.py  main.cpp  main.h
Rafael/atividade5/: CMakeLists.txt  algorithms.h  filters.h  histogram.txt  kmeans.cpp  main.cpp  main.h  masks.h  point.cpp
Rafael/atividade6/: CMakeLists.txt  main.cpp
Rafael/atividade7/: CMakeLists.txt  main.cpp
Rafael/atividade7-b/: CMakeLists.txt  main.cpp
Rafael/atividade7-b/images/: .gitignore
Stefan/: .gitignore  class_image.py
Stefan/atvd1/: main.py
Stefan/atvd2/: .gitignore  main.py
Stefan/atvd3/: .gitignore  CMakeLists.txt  hello.cpp  main.cpp
Stefan/atvd4/: CMakeLists.txt  main.cpp
Stefan/atvd5/: main.cpp
Stefan/atvd6/: main.cpp
Stefan/atvd7/imagem1/: main.cpp
Stefan/atvd7/imagem2/: color_ranges.h  main.cpp
Stefan/atvd7/test_color/: testing.py
Stefan/helpers/: helpers.cpp  helpers.h
atvd1/: image.py  main.ipynb  main.py
rafael/atividade1/: atividade1.ipynb
stefan/: image.py
