cmake_minimum_required(VERSION 2.8)
project( atividade3 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( binarize binarize.cpp )
add_executable( gamma gamma.cpp )
add_executable( layers layers.cpp )
add_executable( window_filter window_filter.cpp )
target_link_libraries( binarize ${OpenCV_LIBS} )
target_link_libraries( gamma ${OpenCV_LIBS} )
target_link_libraries( layers ${OpenCV_LIBS} )
target_link_libraries( window_filter ${OpenCV_LIBS} )