cmake_minimum_required(VERSION 2.8)
project( atividade3 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp main.h filters.h algorithms.h masks.h) 
target_link_libraries( main ${OpenCV_LIBS} )
add_executable( kmeans kmeans.cpp algorithms.h masks.h) 
target_link_libraries( kmeans ${OpenCV_LIBS} )
